# pd_code_to_diagram

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat  pyproject.toml
data/: L10a1.txt  check_diagram_test.py  create_all_coord3d.py  create_all_data_output.py  empty_diagram_check.py  link_table.txt  save_link_table.py
data/coord3d/: L10a1.txt  L10a10.txt  L10a100.txt  L10a101.txt  L10a102.txt  L10a103.txt  L10a104.txt  L10a105.txt  L10a106.txt  L10a107.txt  L10a108.txt  L10a109.txt  L10a11.txt  L10a110.txt  L10a111.txt  L10a112.txt  L10a113.txt  L10a114.txt  L10a115.txt  L10a116.txt  L10a117.txt  L10a118.txt  L10a119.txt  L10a12.txt  L10a120.txt  L10a121.txt  L10a122.txt  L10a123.txt  L10a124.txt  L10a125.txt  L10a126.txt  L10a127.txt  L10a128.txt  L10a129.txt  L10a13.txt  L10a130.txt  L10a131.txt  L10a132.txt  L10a133.txt  L10a134.txt  (+1383 more)
data/diagram/: L10a1.txt  L10a10.txt  L10a100.txt  L10a101.txt  L10a102.txt  L10a103.txt  L10a104.txt  L10a105.txt  L10a106.txt  L10a107.txt  L10a108.txt  L10a109.txt  L10a11.txt  L10a110.txt  L10a111.txt  L10a112.txt  L10a113.txt  L10a114.txt  L10a115.txt  L10a116.txt  L10a117.txt  L10a118.txt  L10a119.txt  L10a12.txt  L10a120.txt  L10a121.txt  L10a122.txt  L10a123.txt  L10a124.txt  L10a125.txt  L10a126.txt  L10a127.txt  L10a128.txt  L10a129.txt  L10a13.txt  L10a130.txt  L10a131.txt  L10a132.txt  (+1385 more)
pd_code_to_diagram/: __init__.py  from_diagram.py  main.py  run_file.py  to_image.py
src/: Coord2dPosition.h  LinkAlgo.h  PDCode.h  PDCrossing.h  PDTree.h  PdToDiagram2d.h  Random.h  main.cpp
tests/: test_layout.py
(+1505 files in other folders)
